fix(ui): increase reaction key/number spacing

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -2182,7 +2182,7 @@ table {
 		padding: 2px 4px;
 		display: flex;
 		align-items: center;
-		gap: 4px;
+		gap: 6px;
 	}
 
 	.reaction.self {
